frontier: use system BLAS and LAPACK

--- a/frontier/configs/frontier-amd.cfg
+++ b/frontier/configs/frontier-amd.cfg
@@ -22,7 +22,7 @@ F90FLAGS = -g
 LDFLAGS = -fgpu-rdc --hip-link
 
 SYS_INC_DIRS = ${ROCM_PATH}/include
-LIBDIRS = ${ROCM_PATH}/lib
+LIBDIRS = ${ROCM_PATH}/lib ${CRAY_LIBSCI_PREFIX_DIR}/lib
 LIBS = stdc++fs amdhip64 pthread
 
 C_LINE_DIRECTIVES = yes
@@ -59,6 +59,11 @@ ADIOS2_LIB_DIRS = ${OLCF_ADIOS2_ROOT}/lib64
 ADIOS2_LIBS = adios2_cxx11_mpi adios2_cxx11
 
 AMREX_DIR = /ccs/home/liwei/local/amrex-24.06-amd
+
+BLAS_DIR = NO_BUILD
+BLAS_LIBS =
+LAPACK_DIR = NO_BUILD
+LAPACK_LIBS =
 
 FFTW3_DIR = ${FFTW_ROOT}
 HDF5_DIR = ${HDF5_ROOT}
