--- a/frontier/configs/frontier-amd.cfg
+++ b/frontier/configs/frontier-amd.cfg
@@ -71,9 +71,12 @@ BOOST_DIR = ${OLCF_BOOST_ROOT}
 GSL_DIR = ${OLCF_GSL_ROOT}
 HWLOC_DIR = ${OLCF_HWLOC_ROOT}
 LIBJPEG_DIR = ${OLCF_LIBJPEG_TURBO_ROOT}
+
 MPI_DIR = ${CRAY_MPICH_DIR}
-MPI_LIB_DIRS = ${CRAY_MPICH_DIR}/lib ${CRAY_MPICH_ROOTDIR}/gtl/lib
-MPI_LIBS = mpi mpi_gtl_hsa
+MPI_INC_DIRS = ${CRAY_MPICH_DIR}/include
+MPI_LIB_DIRS = ${CRAY_MPICH_DIR}/lib ${CRAY_MPICH_ROOTDIR}/gtl/lib /opt/cray/xpmem/2.6.2-2.5_2.22__gd067c3f.shasta/lib64
+MPI_LIBS = mpi mpi_gtl_hsa xpmem
+
 OPENBLAS_DIR = ${OLCF_OPENBLAS_ROOT}
 PTHREADS_DIR = NO_BUILD
 SILO_DIR = BUILD
