--- a/frontier/configs/frontier-amd.cfg
+++ b/frontier/configs/frontier-amd.cfg
@@ -58,7 +58,7 @@ ADIOS2_INC_DIRS = ${OLCF_ADIOS2_ROOT}/include
 ADIOS2_LIB_DIRS = ${OLCF_ADIOS2_ROOT}/lib64
 ADIOS2_LIBS = adios2_cxx11_mpi adios2_cxx11
 
-AMREX_DIR = /ccs/home/liwei/local/amrex-24.06-amd
+AMREX_DIR = /ccs/home/liwei/local/amrex24.06-rocm6.0-cce15-amd-gpumpi
 
 BLAS_DIR = NO_BUILD
 BLAS_LIBS =
