frontier: fix frontier-cray.cfg thanks to Vass

--- a/frontier/configs/frontier-cray.cfg
+++ b/frontier/configs/frontier-cray.cfg
@@ -7,32 +7,34 @@
 # and rebuilt from scratch
 VERSION = frontier-2024-06-13
 
-EXTERNAL_CC = cc
+EXTERNAL_CC  = cc
 EXTERNAL_CXX = CC
-EXTERNAL_F90 = amdflang
-EXTERNAL_LD = CC
+EXTERNAL_F90 = ftn
+EXTERNAL_LD  = CC
 
-EXTERNAL_CFLAGS = -g -O3
+EXTERNAL_CFLAGS   = -g -O3
 EXTERNAL_CXXFLAGS = -g -O3
 EXTERNAL_F90FLAGS = -g -O3
-EXTERNAL_LDFLAGS = -g -O3
+EXTERNAL_LDFLAGS  = -g -O3
 
-CPP = cpp
-CC = cc
-CXX = hipcc --offload-arch=gfx90a
-FPP = cpp
-F90 = amdflang
-LD = hipcc --offload-arch=gfx90a -lhiprand
+CPP  = cpp
+CC   = cc
+CXX  = CC -D__cpp_lib_filesystem=1L -D__HIP_PLATFORM_AMD__ -D__HIP_ROCclr__ -D__HIP_ARCH_GFX90A__=1 --rocm-path=${ROCM_PATH} --offload-arch=gfx90a -x hip
+FPP  = cpp
+F90  = ftn
+LD   = CC -D__cpp_lib_filesystem=1L -D__HIP_PLATFORM_AMD__ -D__HIP_ROCclr__ -D__HIP_ARCH_GFX90A__=1 --rocm-path=${ROCM_PATH} --offload-arch=gfx90a -L${ROCM_PATH}/lib -lamdhip64 -lhiprand
 
 CPPFLAGS = -DSIMD_CPU
-CFLAGS = -g -std=gnu11
-CXXFLAGS = -g -std=c++17 -D__cpp_lib_filesystem=1L
+CFLAGS   = -g -std=gnu11 -I${ROCM_PATH}/include
+CXXFLAGS = -g -std=c++17 -I${ROCM_PATH}/include -Wall -Wno-pass-failed
 FPPFLAGS = -traditional
 F90FLAGS = -g
-LDFLAGS = -fgpu-rdc --hip-link
+LDFLAGS  = -fgpu-rdc --hip-link -I${ROCM_PATH}/lib -lamdhip64 -lhiprand
 
-LIBDIRS = /opt/cray/pe/cce/17.0.0/cce/x86_64/lib ${OLCF_ROCM_ROOT}/lib
-LIBS = stdc++fs f u amdhip64 pthread
+SYS_INC_DIRS = ${ROCM_PATH}/include
+
+LIBDIRS = /opt/cray/pe/cce/17.0.0/cce/x86_64/lib ${OLCF_ROCM_ROOT}/lib ${CRAY_LIBSCI_PREFIX_DIR}/lib
+LIBS    = -L${ROCM_PATH}/lib -lamdhip64 -lhiprand stdc++fs f u pthread
 
 C_LINE_DIRECTIVES = yes
 F_LINE_DIRECTIVES = yes
@@ -67,7 +69,7 @@ ADIOS2_INC_DIRS = ${OLCF_ADIOS2_ROOT}/include
 ADIOS2_LIB_DIRS = ${OLCF_ADIOS2_ROOT}/lib64
 ADIOS2_LIBS = adios2_cxx11_mpi adios2_cxx11
 
-AMREX_DIR = /ccs/home/liwei/local/amrex-24.06
+AMREX_DIR = /ccs/home/liwei/local/amrex24.06-rocm6.0-cce17-cray-gpumpi
 
 FFTW3_DIR = ${FFTW_ROOT}
 HDF5_DIR = ${HDF5_ROOT}
@@ -84,3 +86,8 @@ SILO_DIR = BUILD
 SSHT_DIR = BUILD
 YAML_CPP_DIR = BUILD
 ZLIB_DIR = ${OLCF_ZLIB_ROOT}
+
+LAPACK_DIR  = ${CRAY_LIBSCI_PREFIX_DIR}
+LAPACK_LIBS =
+BLAS_DIR    = ${CRAY_LIBSCI_PREFIX_DIR}
+BLAS_LIBS   =
