--- a/frontier/configs/frontier-amd.cfg
+++ b/frontier/configs/frontier-amd.cfg
@@ -5,25 +5,25 @@
 
 # Whenever this version string changes, the application is configured
 # and rebuilt from scratch
-VERSION = frontier-2024-06-15
+VERSION = frontier-2024-06-20
 
 CPP = cpp
 FPP = cpp
-CC = hipcc --offload-arch=gfx90a
+CC  = hipcc --offload-arch=gfx90a
 CXX = hipcc --offload-arch=gfx90a
 F90 = amdflang
-LD = hipcc --offload-arch=gfx90a -lhiprand
+LD  = hipcc --offload-arch=gfx90a -lhiprand
 
 CPPFLAGS = -DSIMD_CPU
 FPPFLAGS = -traditional
-CFLAGS = -g -std=gnu11
-CXXFLAGS = -g -std=c++17 -D__cpp_lib_filesystem=1L
+CFLAGS   = -g -std=gnu11
+CXXFLAGS = -g -std=c++17 -Wall -Wno-pass-failed -D__cpp_lib_filesystem=1L
 F90FLAGS = -g
-LDFLAGS = -fgpu-rdc --hip-link
+LDFLAGS  = -fgpu-rdc --hip-link
 
 SYS_INC_DIRS = ${ROCM_PATH}/include
-LIBDIRS = ${ROCM_PATH}/lib ${CRAY_LIBSCI_PREFIX_DIR}/lib
-LIBS = stdc++fs amdhip64 pthread
+LIBDIRS      = ${ROCM_PATH}/lib ${CRAY_LIBSCI_PREFIX_DIR}/lib
+LIBS         = stdc++fs f u amdhip64 pthread
 
 C_LINE_DIRECTIVES = yes
 F_LINE_DIRECTIVES = yes
@@ -60,26 +60,24 @@ ADIOS2_LIBS = adios2_cxx11_mpi adios2_cxx11
 
 AMREX_DIR = /ccs/home/liwei/local/amrex24.06-rocm6.0-cce15-amd-gpumpi
 
-BLAS_DIR = NO_BUILD
-BLAS_LIBS =
-LAPACK_DIR = NO_BUILD
-LAPACK_LIBS =
-
-FFTW3_DIR = ${FFTW_ROOT}
-HDF5_DIR = ${HDF5_ROOT}
-BOOST_DIR = ${OLCF_BOOST_ROOT}
-GSL_DIR = ${OLCF_GSL_ROOT}
-HWLOC_DIR = ${OLCF_HWLOC_ROOT}
-LIBJPEG_DIR = ${OLCF_LIBJPEG_TURBO_ROOT}
-
-MPI_DIR = ${CRAY_MPICH_DIR}
+LAPACK_DIR   = ${CRAY_LIBSCI_PREFIX_DIR}
+LAPACK_LIBS  =
+BLAS_DIR     = ${CRAY_LIBSCI_PREFIX_DIR}
+BLAS_LIBS    =
+MPI_DIR      = ${CRAY_MPICH_DIR}
 MPI_INC_DIRS = ${CRAY_MPICH_DIR}/include
 MPI_LIB_DIRS = ${CRAY_MPICH_DIR}/lib ${CRAY_MPICH_ROOTDIR}/gtl/lib /opt/cray/xpmem/2.6.2-2.5_2.22__gd067c3f.shasta/lib64
-MPI_LIBS = mpi mpi_gtl_hsa xpmem
+MPI_LIBS     = mpi mpi_gtl_hsa xpmem
 
+FFTW3_DIR = ${FFTW_ROOT}
+HDF5_DIR  = ${HDF5_ROOT}
+BOOST_DIR = ${BOOST_ROOT}
+GSL_DIR      = ${OLCF_GSL_ROOT}
+HWLOC_DIR    = ${OLCF_HWLOC_ROOT}
+LIBJPEG_DIR  = ${OLCF_LIBJPEG_TURBO_ROOT}
 OPENBLAS_DIR = ${OLCF_OPENBLAS_ROOT}
+ZLIB_DIR     = ${OLCF_ZLIB_ROOT}
 PTHREADS_DIR = NO_BUILD
-SILO_DIR = BUILD
-SSHT_DIR = BUILD
+SILO_DIR     = BUILD
+SSHT_DIR     = BUILD
 YAML_CPP_DIR = BUILD
-ZLIB_DIR = ${OLCF_ZLIB_ROOT}
