--- a/frontier/configs/frontier-cray.cfg
+++ b/frontier/configs/frontier-cray.cfg
@@ -5,7 +5,7 @@
 
 # Whenever this version string changes, the application is configured
 # and rebuilt from scratch
-VERSION = frontier-2024-06-13
+VERSION = frontier-2024-06-20
 
 EXTERNAL_CC  = cc
 EXTERNAL_CXX = CC
@@ -18,23 +18,22 @@ EXTERNAL_F90FLAGS = -g -O3
 EXTERNAL_LDFLAGS  = -g -O3
 
 CPP  = cpp
-CC   = cc
-CXX  = CC -D__cpp_lib_filesystem=1L -D__HIP_PLATFORM_AMD__ -D__HIP_ROCclr__ -D__HIP_ARCH_GFX90A__=1 --rocm-path=${ROCM_PATH} --offload-arch=gfx90a -x hip
 FPP  = cpp
+CC   = cc
+CXX  = CC -x hip
 F90  = ftn
-LD   = CC -D__cpp_lib_filesystem=1L -D__HIP_PLATFORM_AMD__ -D__HIP_ROCclr__ -D__HIP_ARCH_GFX90A__=1 --rocm-path=${ROCM_PATH} --offload-arch=gfx90a -L${ROCM_PATH}/lib -lamdhip64 -lhiprand
+LD   = CC -lhiprand
 
 CPPFLAGS = -DSIMD_CPU
-CFLAGS   = -g -std=gnu11 -I${ROCM_PATH}/include
-CXXFLAGS = -g -std=c++17 -I${ROCM_PATH}/include -Wall -Wno-pass-failed
 FPPFLAGS = -traditional
+CFLAGS   = -g -std=gnu11
+CXXFLAGS = -g -std=c++17 -Wall -Wno-pass-failed -D__cpp_lib_filesystem=1L -D__HIP_ROCclr__ -D__HIP_ARCH_GFX90A__=1 --rocm-path=${ROCM_PATH} --offload-arch=gfx90a
 F90FLAGS = -g
-LDFLAGS  = -fgpu-rdc --hip-link -I${ROCM_PATH}/lib -lamdhip64 -lhiprand
+LDFLAGS  = -fgpu-rdc --hip-link --rocm-path=${ROCM_PATH}
 
 SYS_INC_DIRS = ${ROCM_PATH}/include
-
-LIBDIRS = /opt/cray/pe/cce/17.0.0/cce/x86_64/lib ${OLCF_ROCM_ROOT}/lib ${CRAY_LIBSCI_PREFIX_DIR}/lib
-LIBS    = -L${ROCM_PATH}/lib -lamdhip64 -lhiprand stdc++fs f u pthread
+LIBDIRS      = ${ROCM_PATH}/lib ${CRAY_LIBSCI_PREFIX_DIR}/lib
+LIBS         = stdc++fs f u amdhip64 pthread
 
 C_LINE_DIRECTIVES = yes
 F_LINE_DIRECTIVES = yes
@@ -71,23 +70,25 @@ ADIOS2_LIBS = adios2_cxx11_mpi adios2_cxx11
 
 AMREX_DIR = /ccs/home/liwei/local/amrex24.06-rocm6.0-cce17-cray-gpumpi
 
-FFTW3_DIR = ${FFTW_ROOT}
-HDF5_DIR = ${HDF5_ROOT}
-BOOST_DIR = ${OLCF_BOOST_ROOT}
-GSL_DIR = ${OLCF_GSL_ROOT}
-HWLOC_DIR = ${OLCF_HWLOC_ROOT}
-LIBJPEG_DIR = ${OLCF_LIBJPEG_TURBO_ROOT}
-MPI_DIR = ${CRAY_MPICH_DIR}
-MPI_LIB_DIRS = ${CRAY_MPICH_DIR}/lib ${CRAY_MPICH_ROOTDIR}/gtl/lib
-MPI_LIBS = mpi mpi_gtl_hsa
-OPENBLAS_DIR = ${OLCF_OPENBLAS_ROOT}
-PTHREADS_DIR = NO_BUILD
-SILO_DIR = BUILD
-SSHT_DIR = BUILD
-YAML_CPP_DIR = BUILD
-ZLIB_DIR = ${OLCF_ZLIB_ROOT}
+LAPACK_DIR   = ${CRAY_LIBSCI_PREFIX_DIR}
+LAPACK_LIBS  =
+BLAS_DIR     = ${CRAY_LIBSCI_PREFIX_DIR}
+BLAS_LIBS    =
+MPI_DIR      = ${CRAY_MPICH_DIR}
+MPI_INC_DIRS = ${CRAY_MPICH_DIR}/include
+MPI_LIB_DIRS = ${CRAY_MPICH_DIR}/lib ${CRAY_MPICH_ROOTDIR}/gtl/lib /opt/cray/xpmem/2.6.2-2.5_2.22__gd067c3f.shasta/lib64
+MPI_LIBS     = mpi mpi_gtl_hsa xpmem
 
-LAPACK_DIR  = ${CRAY_LIBSCI_PREFIX_DIR}
-LAPACK_LIBS =
-BLAS_DIR    = ${CRAY_LIBSCI_PREFIX_DIR}
-BLAS_LIBS   =
+FFTW3_DIR = ${FFTW_ROOT}
+HDF5_DIR  = ${HDF5_ROOT}
+BOOST_DIR = ${BOOST_ROOT}
+GSL_DIR      = ${OLCF_GSL_ROOT}
+HWLOC_DIR    = ${OLCF_HWLOC_ROOT}
+LIBJPEG_DIR  = ${OLCF_LIBJPEG_TURBO_ROOT}
+OPENBLAS_DIR = ${OLCF_OPENBLAS_ROOT}
+ZLIB_DIR     = ${OLCF_ZLIB_ROOT}
+PTHREADS_DIR = NO_BUILD
+SILO_DIR     = BUILD
+SSHT_DIR     = BUILD
+YAML_CPP_DIR = BUILD
+
