frontier: remove f u from LIBS in frontier-amd-cce15.cfg

--- a/frontier/configs/frontier-amd-cce15.cfg
+++ b/frontier/configs/frontier-amd-cce15.cfg
@@ -23,7 +23,7 @@ LDFLAGS  = -fgpu-rdc --hip-link
 
 SYS_INC_DIRS = ${ROCM_PATH}/include
 LIBDIRS      = ${ROCM_PATH}/lib ${CRAY_LIBSCI_PREFIX_DIR}/lib
-LIBS         = stdc++fs f u amdhip64 pthread
+LIBS         = stdc++fs amdhip64 pthread
 
 C_LINE_DIRECTIVES = yes
 F_LINE_DIRECTIVES = yes
