--- a/frontier/configs/frontier-amd.cfg
+++ b/frontier/configs/frontier-amd.cfg
@@ -7,16 +7,6 @@
 # and rebuilt from scratch
 VERSION = frontier-2024-06-20
 
-EXTERNAL_CC  = cc
-EXTERNAL_CXX = CC
-EXTERNAL_F90 = ftn
-EXTERNAL_LD  = CC
-
-EXTERNAL_CFLAGS   = -g -O3
-EXTERNAL_CXXFLAGS = -g -O3
-EXTERNAL_F90FLAGS = -g -O3
-EXTERNAL_LDFLAGS  = -g -O3
-
 CPP = cpp
 FPP = cpp
 CC  = hipcc --offload-arch=gfx90a
@@ -31,8 +21,8 @@ CXXFLAGS = -g -std=c++17 -Wall -Wno-pass-failed -D__cpp_lib_filesystem=1L
 F90FLAGS = -g
 LDFLAGS  = -fgpu-rdc --hip-link
 
-SYS_INC_DIRS = ${MPICH_DIR}/include
-LIBDIRS      = ${MPICH_DIR}/lib ${CRAY_LIBSCI_PREFIX_DIR}/lib
+SYS_INC_DIRS = /opt/rocm-6.1.3/include
+LIBDIRS      = /opt/rocm-6.1.3/lib ${CRAY_LIBSCI_PREFIX_DIR}/lib
 LIBS         = stdc++fs amdhip64 pthread
 
 C_LINE_DIRECTIVES = yes
@@ -76,7 +66,7 @@ BLAS_DIR     = ${CRAY_LIBSCI_PREFIX_DIR}
 BLAS_LIBS    =
 MPI_DIR      = ${CRAY_MPICH_DIR}
 MPI_INC_DIRS = ${CRAY_MPICH_DIR}/include
-MPI_LIB_DIRS = ${CRAY_MPICH_DIR}/lib ${CRAY_MPICH_ROOTDIR}/gtl/lib /opt/cray/xpmem/2.6.2-2.5_2.22__gd067c3f.shasta/lib64
+MPI_LIB_DIRS = ${CRAY_MPICH_DIR}/lib ${CRAY_MPICH_ROOTDIR}/gtl/lib /opt/cray/xpmem/2.8.4-1.0_7.3__ga37cbd9.shasta/lib64
 MPI_LIBS     = mpi mpi_gtl_hsa xpmem
 
 FFTW3_DIR = ${FFTW_ROOT}
