frontier: update configs/frontier-amd.cfg

--- a/frontier/configs/frontier-amd.cfg
+++ b/frontier/configs/frontier-amd.cfg
@@ -21,8 +21,8 @@ CXXFLAGS = -g -std=c++17 -Wall -Wno-pass-failed -D__cpp_lib_filesystem=1L
 F90FLAGS = -g
 LDFLAGS  = -fgpu-rdc --hip-link
 
-SYS_INC_DIRS = /opt/rocm-6.1.3/include
-LIBDIRS      = /opt/rocm-6.1.3/lib ${CRAY_LIBSCI_PREFIX_DIR}/lib
+SYS_INC_DIRS = ${ROCM_PATH}/include
+LIBDIRS      = ${ROCM_PATH}/lib ${CRAY_LIBSCI_PREFIX_DIR}/lib
 LIBS         = stdc++fs amdhip64 pthread
 
 C_LINE_DIRECTIVES = yes
@@ -58,7 +58,7 @@ ADIOS2_INC_DIRS = ${OLCF_ADIOS2_ROOT}/include
 ADIOS2_LIB_DIRS = ${OLCF_ADIOS2_ROOT}/lib64
 ADIOS2_LIBS = adios2_cxx11_mpi adios2_cxx11
 
-AMREX_DIR = /ccs/home/liwei/local/amrex
+AMREX_DIR = /ccs/home/liwei/local/amrex-cce17
 
 LAPACK_DIR   = ${CRAY_LIBSCI_PREFIX_DIR}
 LAPACK_LIBS  =
