frontier: add cray

--- a/frontier/archived/frontier-cray-cce17.cfg
+++ b/frontier/archived/frontier-cray-cce17.cfg
@@ -17,17 +17,17 @@ EXTERNAL_CXXFLAGS = -g -O3
 EXTERNAL_F90FLAGS = -g -O3
 EXTERNAL_LDFLAGS  = -g -O3
 
-CPP  = cpp
-FPP  = cpp
-CC   = cc
-CXX  = CC -x hip
-F90  = ftn
-LD   = CC -lhiprand
+CPP = cpp
+FPP = cpp
+CC  = cc
+CXX = CC -x hip
+F90 = ftn
+LD  = CC -lhiprand
 
 CPPFLAGS = -DSIMD_CPU
 FPPFLAGS = -traditional
 CFLAGS   = -g -std=gnu11
-CXXFLAGS = -g -std=c++17 -Wall -Wno-pass-failed -D__cpp_lib_filesystem=1L -D__HIP_ROCclr__ -D__HIP_ARCH_GFX90A__=1 --rocm-path=${ROCM_PATH} --offload-arch=gfx90a
+CXXFLAGS = -g -std=c++17 -Wall -Wno-pass-failed -D__cpp_lib_filesystem=1L -D__HIP_ROCclr__ -D__HIP_ARCH_GFX90A__=1 --rocm-path=${ROCM_PATH} --offload-arch=gfx90a -mllvm -amdgpu-function-calls=true
 F90FLAGS = -g
 LDFLAGS  = -fgpu-rdc --hip-link --rocm-path=${ROCM_PATH}
 
@@ -91,4 +91,3 @@ PTHREADS_DIR = NO_BUILD
 SILO_DIR     = BUILD
 SSHT_DIR     = BUILD
 YAML_CPP_DIR = BUILD
-
