--- a/frontier/cray/frontier-amd.cfg
+++ b/frontier/cray/frontier-amd.cfg
@@ -7,23 +7,33 @@
 # and rebuilt from scratch
 VERSION = frontier-2024-06-20
 
+EXTERNAL_CC  = cc
+EXTERNAL_CXX = CC
+EXTERNAL_F90 = ftn
+EXTERNAL_LD  = CC
+
+EXTERNAL_CFLAGS   = -g -O3
+EXTERNAL_CXXFLAGS = -g -O3
+EXTERNAL_F90FLAGS = -g -O3
+EXTERNAL_LDFLAGS  = -g -O3
+
 CPP = cpp
 FPP = cpp
-CC  = hipcc --offload-arch=gfx90a
-CXX = hipcc --offload-arch=gfx90a
-F90 = amdflang
-LD  = hipcc --offload-arch=gfx90a -lhiprand
+CC  = cc
+CXX = CC -x hip
+F90 = ftn
+LD  = CC -lhiprand
 
 CPPFLAGS = -DSIMD_CPU
 FPPFLAGS = -traditional
 CFLAGS   = -g -std=gnu11
-CXXFLAGS = -g -std=c++17 -Wall -Wno-pass-failed -D__cpp_lib_filesystem=1L
+CXXFLAGS = -g -std=c++17 -Wall -Wno-pass-failed -D__cpp_lib_filesystem=1L -D__HIP_ROCclr__ -D__HIP_ARCH_GFX90A__=1 --rocm-path=${ROCM_PATH} --offload-arch=gfx90a -mllvm -amdgpu-function-calls=true
 F90FLAGS = -g
-LDFLAGS  = -fgpu-rdc --hip-link
+LDFLAGS  = -fgpu-rdc --hip-link --rocm-path=${ROCM_PATH}
 
 SYS_INC_DIRS = ${ROCM_PATH}/include
 LIBDIRS      = ${ROCM_PATH}/lib ${CRAY_LIBSCI_PREFIX_DIR}/lib
-LIBS         = stdc++fs amdhip64 pthread
+LIBS         = stdc++fs f u amdhip64 pthread
 
 C_LINE_DIRECTIVES = yes
 F_LINE_DIRECTIVES = yes
@@ -58,15 +68,21 @@ ADIOS2_INC_DIRS = ${OLCF_ADIOS2_ROOT}/include
 ADIOS2_LIB_DIRS = ${OLCF_ADIOS2_ROOT}/lib64
 ADIOS2_LIBS = adios2_cxx11_mpi adios2_cxx11
 
-AMREX_DIR = /ccs/home/liwei/local/amrex
+AMREX_DIR = /ccs/home/liwei/local/amrex-cray
 
 LAPACK_DIR   = ${CRAY_LIBSCI_PREFIX_DIR}
 LAPACK_LIBS  =
 BLAS_DIR     = ${CRAY_LIBSCI_PREFIX_DIR}
 BLAS_LIBS    =
+
+#MPI_DIR      = ${CRAY_MPICH_DIR}
+#MPI_INC_DIRS = ${CRAY_MPICH_DIR}/include
+#MPI_LIB_DIRS = ${CRAY_MPICH_DIR}/lib ${CRAY_MPICH_ROOTDIR}/gtl/lib /opt/cray/xpmem/2.8.4-1.0_7.3__ga37cbd9.shasta/lib64
+#MPI_LIBS     = mpi mpi_gtl_hsa xpmem
+
 MPI_DIR      = ${CRAY_MPICH_DIR}
 MPI_INC_DIRS = ${CRAY_MPICH_DIR}/include
-MPI_LIB_DIRS = ${CRAY_MPICH_DIR}/lib ${CRAY_MPICH_ROOTDIR}/gtl/lib /opt/cray/xpmem/2.8.4-1.0_7.3__ga37cbd9.shasta/lib64
+MPI_LIB_DIRS = ${CRAY_MPICH_DIR}/lib
 MPI_LIBS     = mpi mpi_gtl_hsa xpmem
 
 FFTW3_DIR = ${FFTW_ROOT}
