--- a/vista/vista.cfg
+++ b/vista/vista.cfg
@@ -74,12 +74,7 @@ F90_WARN_FLAGS  = -Wall
 DISABLE_INT16 = yes
 DISABLE_REAL16 = yes
 
-VECTORISE = no
-
-ADIOS2_DIR = ${OLCF_ADIOS2_ROOT}
-ADIOS2_INC_DIRS = ${OLCF_ADIOS2_ROOT}/include
-ADIOS2_LIB_DIRS = ${OLCF_ADIOS2_ROOT}/lib64
-ADIOS2_LIBS = adios2_cxx11_mpi adios2_cxx11
+# More Options
 
 AMREX_DIR = ${ETKPATH}/amrex-lib
 
@@ -93,16 +88,22 @@ BLAS_LIBS    =
 LAPACK_DIR   = ${CRAY_LIBSCI_PREFIX_DIR}
 LAPACK_LIBS  =
 
-BOOST_DIR    = ${BOOST_ROOT}
-FFTW3_DIR    = ${FFTW_ROOT}
-GSL_DIR      = ${OLCF_GSL_ROOT}
-HDF5_DIR     = ${HDF5_ROOT}
-HWLOC_DIR    = ${OLCF_HWLOC_ROOT}
-LIBJPEG_DIR  = ${OLCF_LIBJPEG_TURBO_ROOT}
+ADIOS2_DIR = ${TACC_ADIOS2_DIR}
+ADIOS2_INC_DIRS = ${TACC_ADIOS2_DIR}/include
+ADIOS2_LIB_DIRS = ${TACC_ADIOS2_DIR}/lib64
+ADIOS2_LIBS = adios2_cxx11_mpi adios2_cxx11
+
+BOOST_DIR    = ${TACC_BOOST_DIR}
+FFTW3_DIR    = ${TACC_FFTW3_DIR}
+GSL_DIR      = ${TACC_GSL_DIR}
+HDF5_DIR     = ${TACC_HDF5_DIR}
+SILO_DIR     = ${TACC_SILO_DIR}
+ZLIB_DIR     = ${TACC_ZLIB_DIR}
+
+#HWLOC_DIR    = ${OLCF_HWLOC_ROOT}
+#LIBJPEG_DIR  = ${OLCF_LIBJPEG_TURBO_ROOT}
 
 #OPENBLAS_DIR = ${OLCF_OPENBLAS_ROOT}
 #PTHREADS_DIR = NO_BUILD
-#SILO_DIR     = BUILD
 #SSHT_DIR     = BUILD
 #YAML_CPP_DIR = BUILD
-#ZLIB_DIR     = ${OLCF_ZLIB_ROOT}
