vista: update vista.cfg

--- a/vista/vista.cfg
+++ b/vista/vista.cfg
@@ -5,23 +5,21 @@ VERSION = delta-2024-02-08
 
 CPP  = cpp
 FPP  = cpp
-CC   = gcc
-CXX  = g++
-F90  = gfortran
-CUCC = nvcc
+CC   = nvc
+CXX  = nvc++
+F90  = nvfortran
 
 # subset CUCCFLAGS without "-x cu" (must no be used here) and options used only to compile code
 # must set LD and not LDFLAGS to avoid ExternalLibraries picking up the options
-LD = nvcc --compiler-bindir g++ -g --forward-unknown-to-host-compiler --relocatable-device-code=true --objdir-as-tempdir
+LD = nvc --compiler-bindir g++ -g --forward-unknown-to-host-compiler --relocatable-device-code=true --objdir-as-tempdir
 
 CPPFLAGS = -DSIMD_CPU
-FPPFLAGS  = -traditional -march=znver2
+FPPFLAGS =
 # do not add -std=gn99 or -std=c99 below since that causes nvcc to fail linking
 # HydroRNSID's utilities. GCC on Delta defaults to c17, so is "new enough"
-CFLAGS    = -m128bit-long-double -D_GNU_SOURCE -fomit-frame-pointer
-CXXFLAGS  = -m128bit-long-double -std=c++17 -D_GNU_SOURCE -fomit-frame-pointer
-F90FLAGS  = -m128bit-long-double -fcray-pointer -ffixed-line-length-none -fno-range-check -march=znver2 -fomit-frame-pointer
-CUCCFLAGS = -pipe -g --compiler-options -march=native -std=c++17 --compiler-options -std=gnu++17 --expt-relaxed-constexpr --extended-lambda --gpu-architecture sm_70 --forward-unknown-to-host-compiler --Werror ext-lambda-captures-this --relocatable-device-code=true --objdir-as-tempdir -x cu
+CFLAGS    =
+CXXFLAGS  =
+F90FLAGS  =
 
 LIBS = gfortran nvToolsExt curand
 
@@ -37,14 +35,12 @@ CPP_DEBUG_FLAGS  = -g -DCARPET_DEBUG
 FPP_DEBUG_FLAGS  = -g -DCARPET_DEBUG
 C_DEBUG_FLAGS    = -g -ftrapv -fstack-protector-all -fbounds-check
 CXX_DEBUG_FLAGS  = -g -ftrapv -fstack-protector-all -fbounds-check
-CUCC_DEBUG_FLAGS =
 F90_DEBUG_FLAGS  = -g -ftrapv -fstack-protector-all -fcheck=bounds,do,mem,pointer,recursion -finit-character=65 -finit-integer=42424242 -finit-real=nan
 
 OPTIMISE            = yes
 CPP_OPTIMISE_FLAGS  = # -DCARPET_OPTIMISE -DNDEBUG
 FPP_OPTIMISE_FLAGS  = # -DCARPET_OPTIMISE -DNDEBUG
 C_OPTIMISE_FLAGS    = -O3
-CUCC_OPTIMISE_FLAGS =
 CXX_OPTIMISE_FLAGS  = -O3
 F90_OPTIMISE_FLAGS  = -O3
 
@@ -67,7 +63,6 @@ CPP_WARN_FLAGS  = -Wall
 FPP_WARN_FLAGS  = -Wall
 C_WARN_FLAGS    = -Wall
 CXX_WARN_FLAGS  = -Wall
-CUCC_WARN_FLAGS = -Xcompiler -Wall
 F90_WARN_FLAGS  = -Wall
 
 # CUDA does not support these
@@ -96,7 +91,11 @@ ADIOS2_LIBS = adios2_cxx11_mpi adios2_cxx11
 BOOST_DIR    = ${TACC_BOOST_DIR}
 FFTW3_DIR    = ${TACC_FFTW3_DIR}
 GSL_DIR      = ${TACC_GSL_DIR}
-HDF5_DIR     = ${TACC_HDF5_DIR}
+
+HDF5_DIR      = ${TACC_HDF5_DIR}
+HDF5_INC_DIRS = ${TACC_HDF5_DIR}/include
+HDF5_LIB_DIRS = ${TACC_HDF5_DIR}/lib
+
 SILO_DIR     = ${TACC_SILO_DIR}
 ZLIB_DIR     = ${TACC_ZLIB_DIR}
 
