--- a/vista/vista.cfg
+++ b/vista/vista.cfg
@@ -8,10 +8,11 @@ FPP  = cpp
 CC   = nvc
 CXX  = nvc++
 F90  = nvfortran
+CUCC = nvc++
 
 # subset CUCCFLAGS without "-x cu" (must no be used here) and options used only to compile code
 # must set LD and not LDFLAGS to avoid ExternalLibraries picking up the options
-LD = nvc --compiler-bindir g++ -g --forward-unknown-to-host-compiler --relocatable-device-code=true --objdir-as-tempdir
+LD = nvc++
 
 CPPFLAGS = -DSIMD_CPU
 FPPFLAGS =
@@ -20,15 +21,17 @@ FPPFLAGS =
 CFLAGS    =
 CXXFLAGS  =
 F90FLAGS  =
+CUCCFLAGS = --gpu-architecture sm_86 -x cu
+
+LIBDIRS = ${TACC_GSL_DIR}/lib
+SYS_INC_DIRS = ${TACC_GSL_DIR}/include
 
 LIBS = gfortran nvToolsExt curand
 
 C_LINE_DIRECTIVES = yes
 F_LINE_DIRECTIVES = yes
 
-VECTORISE                = yes
-VECTORISE_ALIGNED_ARRAYS = no
-VECTORISE_INLINE         = yes
+VECTORISE                = no
 
 DEBUG            = no
 CPP_DEBUG_FLAGS  = -g -DCARPET_DEBUG
@@ -51,12 +54,7 @@ C_PROFILE_FLAGS   = -pg
 CXX_PROFILE_FLAGS = -pg
 F90_PROFILE_FLAGS = -pg
 
-OPENMP           = yes
-CPP_OPENMP_FLAGS = -fopenmp
-FPP_OPENMP_FLAGS = -fopenmp
-C_OPENMP_FLAGS   = -fopenmp
-CXX_OPENMP_FLAGS = -fopenmp
-F90_OPENMP_FLAGS = -fopenmp
+OPENMP           = no
 
 WARN            = no
 CPP_WARN_FLAGS  = -Wall
@@ -72,6 +70,8 @@ DISABLE_REAL16 = yes
 # More Options
 
 AMREX_DIR = ${ETKPATH}/amrex-lib
+AMREX_INC_DIRS = ${ETKPATH}/amrex-lib/include
+AMREX_LIB_DIRS = ${ETKPATH}/amrex-lib/lib
 
 #MPI_DIR      = ${CRAY_MPICH_DIR}
 #MPI_INC_DIRS = ${CRAY_MPICH_DIR}/include
@@ -88,16 +88,24 @@ ADIOS2_INC_DIRS = ${TACC_ADIOS2_DIR}/include
 ADIOS2_LIB_DIRS = ${TACC_ADIOS2_DIR}/lib64
 ADIOS2_LIBS = adios2_cxx11_mpi adios2_cxx11
 
-BOOST_DIR    = ${TACC_BOOST_DIR}
-FFTW3_DIR    = ${TACC_FFTW3_DIR}
-GSL_DIR      = ${TACC_GSL_DIR}
+BOOST_DIR = ${TACC_BOOST_DIR}
+FFTW3_DIR = ${TACC_FFTW3_DIR}
 
-HDF5_DIR      = ${TACC_HDF5_DIR}
+GSL_DIR = ${TACC_GSL_DIR}
+GSL_INC_DIRS = ${TACC_GSL_DIR}/include
+GSL_LIB_DIRS = ${TACC_GSL_DIR}/lib
+
+HDF5_DIR = ${TACC_HDF5_DIR}
 HDF5_INC_DIRS = ${TACC_HDF5_DIR}/include
 HDF5_LIB_DIRS = ${TACC_HDF5_DIR}/lib
 
-SILO_DIR     = ${TACC_SILO_DIR}
-ZLIB_DIR     = ${TACC_ZLIB_DIR}
+SILO_DIR = ${TACC_SILO_DIR}
+SILO_INC_DIRS = ${TACC_SILO_DIR}/include
+SILO_LIB_DIRS = ${TACC_SILO_DIR}/lib
+
+ZLIB_DIR = ${TACC_ZLIB_DIR}
+
+YAML_CPP_DIR = BUILD
 
 #HWLOC_DIR    = ${OLCF_HWLOC_ROOT}
 #LIBJPEG_DIR  = ${OLCF_LIBJPEG_TURBO_ROOT}
@@ -105,4 +113,3 @@ ZLIB_DIR     = ${TACC_ZLIB_DIR}
 #OPENBLAS_DIR = ${OLCF_OPENBLAS_ROOT}
 #PTHREADS_DIR = NO_BUILD
 #SSHT_DIR     = BUILD
-#YAML_CPP_DIR = BUILD
