--- a/vista/vista.cfg
+++ b/vista/vista.cfg
@@ -5,33 +5,34 @@ VERSION = delta-2024-02-08
 
 CPP  = cpp
 FPP  = cpp
-CC   = nvc
-CXX  = nvc++
-F90  = nvfortran
-CUCC = nvc++
+CC   = gcc
+CXX  = g++
+F90  = gfortran
+CUCC = nvcc
 
 # subset CUCCFLAGS without "-x cu" (must no be used here) and options used only to compile code
 # must set LD and not LDFLAGS to avoid ExternalLibraries picking up the options
-LD = nvc++
+LD = nvcc --compiler-bindir g++ -g --forward-unknown-to-host-compiler --relocatable-device-code=true --objdir-as-tempdir
 
 CPPFLAGS = -DSIMD_CPU
-FPPFLAGS =
+FPPFLAGS = -traditional
 # do not add -std=gn99 or -std=c99 below since that causes nvcc to fail linking
 # HydroRNSID's utilities. GCC on Delta defaults to c17, so is "new enough"
-CFLAGS    =
-CXXFLAGS  =
-F90FLAGS  =
-CUCCFLAGS = --gpu-architecture sm_86 -x cu
+CFLAGS    = -D_GNU_SOURCE -fomit-frame-pointer
+CXXFLAGS  = -std=c++17 -D_GNU_SOURCE -fomit-frame-pointer
+F90FLAGS  = -ffixed-line-length-none -fno-range-check -fomit-frame-pointer
+CUCCFLAGS = -pipe -g --compiler-options -march=native -std=c++17 --compiler-options -std=gnu++17 --expt-relaxed-constexpr --extended-lambda --gpu-architecture sm_86 --forward-unknown-to-host-compiler --Werror ext-lambda-captures-this --relocatable-device-code=true --objdir-as-tempdir -x cu
 
-LIBDIRS = ${TACC_GSL_DIR}/lib
-SYS_INC_DIRS = ${TACC_GSL_DIR}/include
+LDFLAGS = -L${TACC_CUDA_LIB}
 
-LIBS = gfortran nvToolsExt curand
+SYS_INC_DIRS = ${TACC_NVMATH_INC} ${TACC_GSL_DIR}/include
+LIBDIRS      = ${TACC_NVMATH_LIB} ${TACC_GSL_DIR}/lib
+LIBS         = gfortran nvToolsExt curand
 
 C_LINE_DIRECTIVES = yes
 F_LINE_DIRECTIVES = yes
 
-VECTORISE                = no
+VECTORISE = no
 
 DEBUG            = no
 CPP_DEBUG_FLAGS  = -g -DCARPET_DEBUG
@@ -69,39 +70,32 @@ DISABLE_REAL16 = yes
 
 # More Options
 
-AMREX_DIR = ${ETKPATH}/amrex-lib
-AMREX_INC_DIRS = ${ETKPATH}/amrex-lib/include
-AMREX_LIB_DIRS = ${ETKPATH}/amrex-lib/lib
+#AMREX_DIR = ${ETKPATH}/amrex-lib
+AMREX_ENABLE_CUDA = yes
 
-#MPI_DIR      = ${CRAY_MPICH_DIR}
-#MPI_INC_DIRS = ${CRAY_MPICH_DIR}/include
-#MPI_LIB_DIRS = ${CRAY_MPICH_DIR}/lib
-#MPI_LIBS     = mpi mpi_gtl_hsa xpmem
+MPI_DIR      = ${TACC_MPI_DIR}
+MPI_INC_DIRS = ${TACC_MPI_DIR}/include
+MPI_LIB_DIRS = ${TACC_MPI_DIR}/lib
+MPI_LIBS     = mpi
 
-BLAS_DIR     = ${CRAY_LIBSCI_PREFIX_DIR}
+BLAS_DIR     =
 BLAS_LIBS    =
-LAPACK_DIR   = ${CRAY_LIBSCI_PREFIX_DIR}
+LAPACK_DIR   =
 LAPACK_LIBS  =
 
 ADIOS2_DIR = ${TACC_ADIOS2_DIR}
-ADIOS2_INC_DIRS = ${TACC_ADIOS2_DIR}/include
-ADIOS2_LIB_DIRS = ${TACC_ADIOS2_DIR}/lib64
+ADIOS2_INC_DIRS = ${TACC_ADIOS2_INC}
+ADIOS2_LIB_DIRS = ${TACC_ADIOS2_LIB}
 ADIOS2_LIBS = adios2_cxx11_mpi adios2_cxx11
 
 BOOST_DIR = ${TACC_BOOST_DIR}
 FFTW3_DIR = ${TACC_FFTW3_DIR}
 
 GSL_DIR = ${TACC_GSL_DIR}
-GSL_INC_DIRS = ${TACC_GSL_DIR}/include
-GSL_LIB_DIRS = ${TACC_GSL_DIR}/lib
 
 HDF5_DIR = ${TACC_HDF5_DIR}
-HDF5_INC_DIRS = ${TACC_HDF5_DIR}/include
-HDF5_LIB_DIRS = ${TACC_HDF5_DIR}/lib
-
-SILO_DIR = ${TACC_SILO_DIR}
-SILO_INC_DIRS = ${TACC_SILO_DIR}/include
-SILO_LIB_DIRS = ${TACC_SILO_DIR}/lib
+HDF5_INC_DIRS = ${TACC_HDF5_INC}
+HDF5_LIB_DIRS = ${TACC_HDF5_LIB}
 
 ZLIB_DIR = ${TACC_ZLIB_DIR}
 
@@ -113,3 +107,4 @@ YAML_CPP_DIR = BUILD
 #OPENBLAS_DIR = ${OLCF_OPENBLAS_ROOT}
 #PTHREADS_DIR = NO_BUILD
 #SSHT_DIR     = BUILD
+#SILO_DIR     = BUILD
