vista: update vista.cfg

--- a/vista/vista.cfg
+++ b/vista/vista.cfg
@@ -27,7 +27,7 @@ LDFLAGS = -L${TACC_CUDA_LIB}
 
 SYS_INC_DIRS = ${TACC_NVMATH_INC} ${TACC_GSL_DIR}/include
 LIBDIRS      = ${TACC_NVMATH_LIB} ${TACC_GSL_DIR}/lib
-LIBS         = gfortran nvToolsExt curand
+LIBS         = gfortran nvToolsExt curand hdf5
 
 C_LINE_DIRECTIVES = yes
 F_LINE_DIRECTIVES = yes
@@ -83,10 +83,10 @@ BLAS_LIBS    =
 LAPACK_DIR   =
 LAPACK_LIBS  =
 
-ADIOS2_DIR = ${TACC_ADIOS2_DIR}
-ADIOS2_INC_DIRS = ${TACC_ADIOS2_INC}
-ADIOS2_LIB_DIRS = ${TACC_ADIOS2_LIB}
-ADIOS2_LIBS = adios2_cxx11_mpi adios2_cxx11
+#ADIOS2_DIR = ${TACC_ADIOS2_DIR}
+#ADIOS2_INC_DIRS = ${TACC_ADIOS2_INC}
+#ADIOS2_LIB_DIRS = ${TACC_ADIOS2_LIB}
+#ADIOS2_LIBS = adios2_cxx11_mpi adios2_cxx11
 
 BOOST_DIR = ${TACC_BOOST_DIR}
 FFTW3_DIR = ${TACC_FFTW3_DIR}
