vista: update nvhpc files

--- a/vista/nvhpc/vista.cfg
+++ b/vista/nvhpc/vista.cfg
@@ -5,25 +5,24 @@ VERSION = delta-2024-02-08
 
 CPP  = cpp
 FPP  = cpp
-CC   = gcc
-CXX  = g++
+CC   = nvc
+CXX  = nvc++
 F90  = gfortran
-CUCC = nvcc
 
 # subset CUCCFLAGS without "-x cu" (must no be used here) and options used only to compile code
 # must set LD and not LDFLAGS to avoid ExternalLibraries picking up the options
-LD = nvcc --compiler-bindir g++ -g --forward-unknown-to-host-compiler --relocatable-device-code=true --objdir-as-tempdir
+LD = nvc++ -g --forward-unknown-to-host-compiler --relocatable-device-code=true --objdir-as-tempdir
 
 CPPFLAGS = -DSIMD_CPU
 FPPFLAGS = -traditional
 # do not add -std=gn99 or -std=c99 below since that causes nvcc to fail linking
 # HydroRNSID's utilities. GCC on Delta defaults to c17, so is "new enough"
-CFLAGS    = -D_GNU_SOURCE -fomit-frame-pointer
+CFLAGS    = -std=gnu11 -D_GNU_SOURCE -fomit-frame-pointer
 CXXFLAGS  = -std=c++17 -D_GNU_SOURCE -fomit-frame-pointer
 F90FLAGS  = -ffixed-line-length-none -fno-range-check -fomit-frame-pointer
 CUCCFLAGS = -pipe -g --compiler-options -march=native -std=c++17 --compiler-options -std=gnu++17 --expt-relaxed-constexpr --extended-lambda --gpu-architecture sm_86 --forward-unknown-to-host-compiler --Werror ext-lambda-captures-this --relocatable-device-code=true --objdir-as-tempdir -x cu
 
-LDFLAGS = -L${TACC_CUDA_LIB}
+LDFLAGS = -L${TACC_NVIDIA_LIB}
 
 SYS_INC_DIRS = ${TACC_NVMATH_INC} ${TACC_GSL_DIR}/include
 LIBDIRS      = ${TACC_NVMATH_LIB} ${TACC_GSL_DIR}/lib
@@ -97,6 +96,10 @@ HDF5_DIR = ${TACC_HDF5_DIR}
 HDF5_INC_DIRS = ${TACC_HDF5_INC}
 HDF5_LIB_DIRS = ${TACC_HDF5_LIB}
 
+SILO_DIR = ${TACC_SILO_DIR}
+SILO_INC_DIRS = ${TACC_SILO_INC}
+SILO_LIB_DIRS = ${TACC_SILO_LIB}
+
 ZLIB_DIR = ${TACC_ZLIB_DIR}
 
 YAML_CPP_DIR = BUILD
@@ -107,4 +110,3 @@ YAML_CPP_DIR = BUILD
 #OPENBLAS_DIR = ${OLCF_OPENBLAS_ROOT}
 #PTHREADS_DIR = NO_BUILD
 #SSHT_DIR     = BUILD
-#SILO_DIR     = BUILD
