vista: update nvhpc/Compile-AMReX.sh

--- a/vista/nvhpc/vista.cfg
+++ b/vista/nvhpc/vista.cfg
@@ -11,22 +11,21 @@ F90  = gfortran
 
 # subset CUCCFLAGS without "-x cu" (must no be used here) and options used only to compile code
 # must set LD and not LDFLAGS to avoid ExternalLibraries picking up the options
-LD = nvc++ -g --forward-unknown-to-host-compiler --relocatable-device-code=true --objdir-as-tempdir
+LD = nvc++ -g --relocatable-device-code=true
 
 CPPFLAGS = -DSIMD_CPU
 FPPFLAGS = -traditional
 # do not add -std=gn99 or -std=c99 below since that causes nvcc to fail linking
 # HydroRNSID's utilities. GCC on Delta defaults to c17, so is "new enough"
-CFLAGS    = -std=gnu11 -D_GNU_SOURCE -fomit-frame-pointer
-CXXFLAGS  = -std=c++17 -D_GNU_SOURCE -fomit-frame-pointer
+CFLAGS    = -D_GNU_SOURCE -fomit-frame-pointer
+CXXFLAGS  = -cuda -g --compiler-options -march=native
 F90FLAGS  = -ffixed-line-length-none -fno-range-check -fomit-frame-pointer
-CUCCFLAGS = -pipe -g --compiler-options -march=native -std=c++17 --compiler-options -std=gnu++17 --expt-relaxed-constexpr --extended-lambda --gpu-architecture sm_86 --forward-unknown-to-host-compiler --Werror ext-lambda-captures-this --relocatable-device-code=true --objdir-as-tempdir -x cu
 
-LDFLAGS = -L${TACC_NVIDIA_LIB}
+LDFLAGS = -L${TACC_NVIDIA_LIB} -L${TACC_CUDA_LIB}
 
-SYS_INC_DIRS = ${TACC_NVMATH_INC} ${TACC_GSL_DIR}/include
-LIBDIRS      = ${TACC_NVMATH_LIB} ${TACC_GSL_DIR}/lib
-LIBS         = gfortran nvToolsExt curand hdf5
+SYS_INC_DIRS = ${TACC_NVIDIA_MATH_INC} ${TACC_GSL_DIR}/include ${TACC_CUDA_INC}
+LIBDIRS      = ${TACC_NVIDIA_MATH_LIB} ${TACC_GSL_DIR}/lib ${TACC_CUDA_LIB}
+LIBS         = nvfortran nvToolsExt curand hdf5
 
 C_LINE_DIRECTIVES = yes
 F_LINE_DIRECTIVES = yes
@@ -69,8 +68,8 @@ DISABLE_REAL16 = yes
 
 # More Options
 
-#AMREX_DIR = ${ETKPATH}/amrex-lib
-AMREX_ENABLE_CUDA = yes
+AMREX_DIR = ${ETKPATH}/amrex-lib
+#AMREX_ENABLE_CUDA = yes
 
 MPI_DIR      = ${TACC_MPI_DIR}
 MPI_INC_DIRS = ${TACC_MPI_DIR}/include
@@ -82,10 +81,10 @@ BLAS_LIBS    =
 LAPACK_DIR   =
 LAPACK_LIBS  =
 
-#ADIOS2_DIR = ${TACC_ADIOS2_DIR}
-#ADIOS2_INC_DIRS = ${TACC_ADIOS2_INC}
-#ADIOS2_LIB_DIRS = ${TACC_ADIOS2_LIB}
-#ADIOS2_LIBS = adios2_cxx11_mpi adios2_cxx11
+ADIOS2_DIR = ${TACC_ADIOS2_DIR}
+ADIOS2_INC_DIRS = ${TACC_ADIOS2_INC}
+ADIOS2_LIB_DIRS = ${TACC_ADIOS2_LIB}
+ADIOS2_LIBS = adios2_cxx11_mpi adios2_cxx11
 
 BOOST_DIR = ${TACC_BOOST_DIR}
 FFTW3_DIR = ${TACC_FFTW3_DIR}
