vista: update fils for nvhpc

--- a/vista/nvhpc/vista.cfg
+++ b/vista/nvhpc/vista.cfg
@@ -8,18 +8,20 @@ FPP  = cpp
 CC   = nvc
 CXX  = nvc++
 F90  = gfortran
+CUCC = nvcc
 
 # subset CUCCFLAGS without "-x cu" (must no be used here) and options used only to compile code
 # must set LD and not LDFLAGS to avoid ExternalLibraries picking up the options
-LD = nvc++ -g --relocatable-device-code=true
+LD = nvc++ -cuda -gpu=cc90,rdc
 
 CPPFLAGS = -DSIMD_CPU
 FPPFLAGS = -traditional
 # do not add -std=gn99 or -std=c99 below since that causes nvcc to fail linking
 # HydroRNSID's utilities. GCC on Delta defaults to c17, so is "new enough"
 CFLAGS    = -D_GNU_SOURCE -fomit-frame-pointer
-CXXFLAGS  = -cuda -g --compiler-options -march=native
+CXXFLAGS  = -cuda -gpu=cc90,rdc
 F90FLAGS  = -ffixed-line-length-none -fno-range-check -fomit-frame-pointer
+CUCCFLAGS = -pipe --compiler-options -march=native -std=c++17 --compiler-options -std=gnu++17 --expt-relaxed-constexpr --extended-lambda --gpu-architecture sm_90 --forward-unknown-to-host-compiler --Werror ext-lambda-captures-this --relocatable-device-code=true --objdir-as-tempdir -x cu
 
 LDFLAGS = -L${TACC_NVIDIA_LIB} -L${TACC_CUDA_LIB}
 
@@ -39,7 +41,7 @@ C_DEBUG_FLAGS    = -g -ftrapv -fstack-protector-all -fbounds-check
 CXX_DEBUG_FLAGS  = -g -ftrapv -fstack-protector-all -fbounds-check
 F90_DEBUG_FLAGS  = -g -ftrapv -fstack-protector-all -fcheck=bounds,do,mem,pointer,recursion -finit-character=65 -finit-integer=42424242 -finit-real=nan
 
-OPTIMISE            = yes
+OPTIMISE            = no
 CPP_OPTIMISE_FLAGS  = # -DCARPET_OPTIMISE -DNDEBUG
 FPP_OPTIMISE_FLAGS  = # -DCARPET_OPTIMISE -DNDEBUG
 C_OPTIMISE_FLAGS    = -O3
