vista: use nvpl

--- a/vista/gcc/vista.cfg
+++ b/vista/gcc/vista.cfg
@@ -21,9 +21,9 @@ FPPFLAGS = -traditional
 CFLAGS    = -D_GNU_SOURCE -fomit-frame-pointer
 CXXFLAGS  = -std=c++17 -D_GNU_SOURCE -fomit-frame-pointer
 F90FLAGS  = -ffixed-line-length-none -fno-range-check -fomit-frame-pointer
-CUCCFLAGS = -pipe -g --compiler-options -march=native -std=c++17 --compiler-options -std=gnu++17 --expt-relaxed-constexpr --extended-lambda --gpu-architecture sm_86 --forward-unknown-to-host-compiler --Werror ext-lambda-captures-this --relocatable-device-code=true --objdir-as-tempdir -x cu
+CUCCFLAGS = -pipe -g --compiler-options -march=native -std=c++17 --compiler-options -std=gnu++17 --expt-relaxed-constexpr --extended-lambda --gpu-architecture sm_90 --forward-unknown-to-host-compiler --Werror ext-lambda-captures-this --relocatable-device-code=true --objdir-as-tempdir -x cu
 
-LDFLAGS = -L${TACC_CUDA_LIB}
+LDFLAGS = -L${TACC_CUDA_LIB} -L${TACC_NVPL_LIB}
 
 SYS_INC_DIRS = ${TACC_NVMATH_INC} ${TACC_GSL_DIR}/include
 LIBDIRS      = ${TACC_NVMATH_LIB} ${TACC_GSL_DIR}/lib
@@ -78,10 +78,15 @@ MPI_INC_DIRS = ${TACC_MPI_DIR}/include
 MPI_LIB_DIRS = ${TACC_MPI_DIR}/lib
 MPI_LIBS     = mpi
 
-BLAS_DIR     =
-BLAS_LIBS    =
-LAPACK_DIR   =
-LAPACK_LIBS  =
+BLAS_DIR        = ${TACC_NVPL_DIR}
+BLAS_INC_DIRS   = ${TACC_NVPL_DIR}/include
+BLAS_LIB_DIRS   = ${TACC_NVPL_DIR}/lib
+BLAS_LIBS       = nvpl_blas_lp64_gomp
+
+LAPACK_DIR      = ${TACC_NVPL_DIR}
+LAPACK_INC_DIRS = ${TACC_NVPL_DIR}/include
+LAPACK_LIB_DIRS = ${TACC_NVPL_DIR}/lib
+LAPACK_LIBS     = nvpl_lapack_lp64_gomp
 
 #ADIOS2_DIR = ${TACC_ADIOS2_DIR}
 #ADIOS2_INC_DIRS = ${TACC_ADIOS2_INC}
@@ -90,7 +95,6 @@ LAPACK_LIBS  =
 
 BOOST_DIR = ${TACC_BOOST_DIR}
 FFTW3_DIR = ${TACC_FFTW3_DIR}
-
 GSL_DIR = ${TACC_GSL_DIR}
 
 HDF5_DIR = ${TACC_HDF5_DIR}
