vista: update vista.cfg for gcc

--- a/vista/gcc/vista.cfg
+++ b/vista/gcc/vista.cfg
@@ -70,7 +70,7 @@ DISABLE_REAL16 = yes
 
 # More Options
 
-#AMREX_DIR = ${ETKPATH}/amrex-lib
+AMREX_DIR = ${ETKPATH}/amrex-lib
 AMREX_ENABLE_CUDA = yes
 
 MPI_DIR      = ${TACC_MPI_DIR}
