--- a/vista/nvhpc/vista.cfg
+++ b/vista/nvhpc/vista.cfg
@@ -11,20 +11,20 @@ F90  = gfortran
 
 # subset CUCCFLAGS without "-x cu" (must no be used here) and options used only to compile code
 # must set LD and not LDFLAGS to avoid ExternalLibraries picking up the options
-LD = nvc++ -cuda -gpu=cc90,rdc
+LD = nvc++
 
 CPPFLAGS = -DSIMD_CPU
 FPPFLAGS = -traditional
 # do not add -std=gn99 or -std=c99 below since that causes nvcc to fail linking
 # HydroRNSID's utilities. GCC on Delta defaults to c17, so is "new enough"
-CFLAGS    = -I${TACC_NVIDIA_INC} -I${TACC_CUDA_INC}
-CXXFLAGS  = -cuda -gpu=cc90,rdc -I${TACC_NVIDIA_INC} -I${TACC_CUDA_INC}
+CFLAGS    = -I${TACC_NVIDIA_INC} -std=c99
+CXXFLAGS  = -I${TACC_NVIDIA_INC}
 F90FLAGS  = -ffixed-line-length-none -fno-range-check -fomit-frame-pointer
 
-LDFLAGS = -L${TACC_NVIDIA_LIB} -L${TACC_CUDA_LIB}
+LDFLAGS = -L${TACC_NVIDIA_LIB}
 
-SYS_INC_DIRS = ${TACC_NVIDIA_MATH_INC} ${TACC_GSL_DIR}/include ${TACC_CUDA_INC}
-LIBDIRS      = ${TACC_NVIDIA_MATH_LIB} ${TACC_GSL_DIR}/lib ${TACC_CUDA_LIB}
+SYS_INC_DIRS = ${TACC_NVIDIA_MATH_INC} ${TACC_GSL_DIR}/include
+LIBDIRS      = ${TACC_NVIDIA_MATH_LIB} ${TACC_GSL_DIR}/lib
 LIBS         = gfortran nvToolsExt curand hdf5
 
 C_LINE_DIRECTIVES = yes
@@ -68,7 +68,7 @@ DISABLE_REAL16 = yes
 
 # More Options
 
-#AMREX_DIR = ${ETKPATH}/amrex-lib
+AMREX_DIR = ${WORK}/local/amrex-lib
 AMREX_ENABLE_CUDA = yes
 
 MPI_DIR      = ${TACC_MPI_DIR}
