vista: set HWLOC_DIR for gcc case

--- a/vista/gcc/vista.cfg
+++ b/vista/gcc/vista.cfg
@@ -78,6 +78,10 @@ MPI_INC_DIRS = ${TACC_MPI_DIR}/include
 MPI_LIB_DIRS = ${TACC_MPI_DIR}/lib
 MPI_LIBS     = mpi
 
+HWLOC_DIR      = ${TACC_MPI_DIR}
+HWLOC_INC_DIRS = ${TACC_MPI_DIR}/include
+HWLOC_LIB_DIRS = ${TACC_MPI_DIR}/lib
+
 BLAS_DIR        = ${TACC_NVPL_DIR}
 BLAS_INC_DIRS   = ${TACC_NVPL_DIR}/include
 BLAS_LIB_DIRS   = ${TACC_NVPL_DIR}/lib
