frontera: copy cfg file from simfactory

--- a/frontera/oneapi/frontera.cfg
+++ b/frontera/oneapi/frontera.cfg
@@ -1,92 +1,115 @@
-# Configuration for an frontera installation: oneapi
-
-# Whenever this version string changes, the application is configured 
-# and rebuilt from scratch 
-VERSION = frontera-2023-09-30
+# Whenever this version string changes, the application is configured
+# and rebuilt from scratch
+VERSION = frontera-2024-11-24
 
 CPP = cpp
+FPP = cpp
 CC  = icx
 CXX = icpx
-FPP = cpp
-F77 = ifx
-F90 = ifx
+F90 = ifort
 
-CPPFLAGS = -g -D_XOPEN_SOURCE -D_XOPEN_SOURCE_EXTENDED -DSIMD_CPU
+CPPFLAGS = -g
 FPPFLAGS = -g -traditional
-CFLAGS   = -g -pipe -std=c11
-CXXFLAGS = -g -pipe -std=c++17
-F77FLAGS = -g -traceback -debug all -xCORE-AVX512 -align -pad -safe-cray-ptr
+CFLAGS   = -g -traceback -debug all -xCORE-AVX512 -align -std=gnu99 -fp-model precise
+CXXFLAGS = -g -traceback -debug all -xCORE-AVX512 -align -std=gnu++17 -fp-model precise
 F90FLAGS = -g -traceback -debug all -xCORE-AVX512 -align -pad -safe-cray-ptr
 
-#LDFLAGS  = -Wl,-rpath=/work2/08708/liwei/frontera/SpackView/oneapi/view/lib
-#CPPFLAGS = -DMPICH_IGNORE_CXX_SEEK
+LDFLAGS = -Wl,--export-dynamic -xCORE-AVX512
+LIBDIRS = ${TACC_GSL_DIR}/lib
+SYS_INC_DIRS = ${TACC_GSL_DIR}/include
 
 C_LINE_DIRECTIVES = yes
 F_LINE_DIRECTIVES = yes
 
-INTEGER_PRECISION = 4
-REAL_PRECISION = 8
+VECTORISE                = yes
+VECTORISE_ALIGNED_ARRAYS = no
+VECTORISE_INLINE         = no
 
 DEBUG           = no
 CPP_DEBUG_FLAGS = -DCARPET_DEBUG
-C_DEBUG_FLAGS   = -fbounds-check -fsanitize=undefined -fstack-protector-all -ftrapv
-CXX_DEBUG_FLAGS = -fbounds-check -fsanitize=undefined -fstack-protector-all -ftrapv
 FPP_DEBUG_FLAGS = -DCARPET_DEBUG
-F90_DEBUG_FLAGS = -fcheck=bounds,do,mem,pointer,recursion -finit-character=65 -finit-integer=42424242 -finit-real=nan -fsanitize=undefined -fstack-protector-all -ftrapv
+C_DEBUG_FLAGS   = -O0
+CXX_DEBUG_FLAGS = -O0
+F90_DEBUG_FLAGS = -O0 -check bounds -check format
+
+# -ipo increases dramatically the compilation time, but it can
+# lead to a 1-2% performance boost
 
 OPTIMISE           = yes
-C_OPTIMISE_FLAGS   = -Ofast
-CXX_OPTIMISE_FLAGS = -Ofast
-F90_OPTIMISE_FLAGS = -Ofast
+CPP_OPTIMISE_FLAGS = # -DCARPET_OPTIMISE -DNDEBUG
+FPP_OPTIMISE_FLAGS = # -DCARPET_OPTIMISE -DNDEBUG
+C_OPTIMISE_FLAGS   = -O2 # -ipo
+CXX_OPTIMISE_FLAGS = -O2 # -ipo
+F90_OPTIMISE_FLAGS = -O2 # -ipo
+
+CPP_NO_OPTIMISE_FLAGS  =
+FPP_NO_OPTIMISE_FLAGS  =
+C_NO_OPTIMISE_FLAGS    = -O0
+CXX_NO_OPTIMISE_FLAGS  = -O0
+CUCC_NO_OPTIMISE_FLAGS =
+F90_NO_OPTIMISE_FLAGS  = -O0
+
+PROFILE           = no
+CPP_PROFILE_FLAGS =
+FPP_PROFILE_FLAGS =
+C_PROFILE_FLAGS   = -pg
+CXX_PROFILE_FLAGS = -pg
+F90_PROFILE_FLAGS = -pg
 
 OPENMP           = yes
 CPP_OPENMP_FLAGS = -fopenmp
 FPP_OPENMP_FLAGS = -fopenmp
 C_OPENMP_FLAGS   = -fopenmp
 CXX_OPENMP_FLAGS = -fopenmp
-F77_OPENMP_FLAGS = -fopenmp
 F90_OPENMP_FLAGS = -fopenmp
 
 WARN           = yes
-CPP_WARN_FLAGS = -Wall
-C_WARN_FLAGS = -Wno-implicit-function-declaration
-CXX_WARN_FLAGS =
+CPP_WARN_FLAGS =
 FPP_WARN_FLAGS =
+C_WARN_FLAGS   =
+CXX_WARN_FLAGS =
 F90_WARN_FLAGS =
 
-MPI_DIR = /opt/intel/oneapi/mpi/2021.9.0
-MPI_LIB_DIRS = /opt/intel/oneapi/mpi/2021.9.0/lib
-MPI_INC_DIRS = /opt/intel/oneapi/mpi/2021.9.0/include
-MPI_LIBS = mpi
 
-HWLOC_DIR = /opt/apps/hwloc/1.11.12
+BLAS_DIR  = ${MKLROOT}/lib/intel64
+BLAS_LIBS = mkl_intel_lp64 mkl_sequential mkl_core
 
-BLAS_DIR  = NO_BUILD
-BLAS_LIBS = -mkl
-LAPACK_DIR  = NO_BUILD
-LAPACK_LIBS = -mkl
-OPENBLAS_DIR  = NO_BUILD
-OPENBLAS_LIBS = -mkl
+HWLOC_DIR        = BUILD
+HWLOC_EXTRA_LIBS = numa
+
+LAPACK_DIR  = ${MKLROOT}/lib/intel64
+LAPACK_LIBS = mkl_intel_lp64 mkl_sequential mkl_core
+
+OPENBLAS_DIR  = ${MKLROOT}
+OPENBLAS_LIB_DIRS  = ${MKLROOT}/lib/intel64
+OPENBLAS_LIBS = mkl_intel_lp64 mkl_sequential mkl_core
+
+HDF5_DIR = ${TACC_PHDF5_DIR}
+HDF5_INC_DIRS = ${TACC_PHDF5_DIR}/include
+HDF5_LIB_DIRS = ${TACC_PHDF5_DIR}/lib
+HDF5_LIBS = hdf5_hl_fortran hdf5_hl hdf5_fortran hdf5
+
+# GSL's detect calls gsl-config which returns wrong results
+# as a workaround the directories were added to LIBDIRS and SYS_INC_DIRS above
+GSL_DIR = ${TACC_GSL_DIR}
+# GSL_INC_DIRS = ${TACC_GSL_DIR}/include
+# GSL_LIB_DIRS = ${TACC_GSL_DIR}/lib
+# GSL_LIBS = gsl gslcblas m
+
+HWLOC_DIR = ${TACC_HWLOC_DIR}
+
+MPI_DIR      = ${TACC_IMPI_DIR}
+MPI_INC_DIRS = ${TACC_IMPI_DIR}/include
+MPI_LIB_DIRS = ${TACC_IMPI_DIR}/lib/release ${TACC_IMPI_DIR}/lib
+MPI_LIBS     = mpicxx mpifort mpi dl rt pthread
+
+FFTW3_DIR = ${MKLROOT}
+FFTW3_LIB_DIRS = ${MKLROOT}/lib/intel64
+FFTW3_INC_DIRS = ${MKLROOT}/include/fftw
+FFTW3_LIBS = mkl_intel_lp64 mkl_sequential mkl_core
+
+PAPI_DIR = ${TACC_PAPI_DIR}
+
+PETSC_LAPACK_EXTRA_LIBS = mkl_intel_lp64 mkl_sequential mkl_core
 
 PTHREADS_DIR = NO_BUILD
-
-GSL_DIR = /work2/08708/liwei/frontera/SpackView/oneapi23.1.0-impi21.9.0/view
-ADIOS2_DIR = /work2/08708/liwei/frontera/SpackView/oneapi23.1.0-impi21.9.0/view
-ADIOS2_LIB_DIRS = /work2/08708/liwei/frontera/SpackView/oneapi23.1.0-impi21.9.0/view/lib64
-ADIOS2_LIBS = adios2_cxx11_mpi adios2_cxx11
-OPENPMD_API_DIR = /work2/08708/liwei/frontera/SpackView/oneapi23.1.0-impi21.9.0/view
-OPENPMD_DIR = /work2/08708/liwei/frontera/SpackView/oneapi23.1.0-impi21.9.0/view
-FFTW3_DIR = /work2/08708/liwei/frontera/SpackView/oneapi23.1.0-impi21.9.0/view
-HDF5_DIR = /work2/08708/liwei/frontera/SpackView/oneapi23.1.0-impi21.9.0/view
-HDF5_LIBS = hdf5_hl_cpp hdf5_cpp hdf5hl_fortran hdf5_fortran hdf5_hl hdf5
-SILO_DIR = /work2/08708/liwei/frontera/SpackView/oneapi23.1.0-impi21.9.0/view
-BOOST_DIR = /work2/08708/liwei/frontera/SpackView/oneapi23.1.0-impi21.9.0/view
-AMREX_DIR = /work2/08708/liwei/frontera/SpackView/oneapi23.1.0-impi21.9.0/view
-NSIMD_DIR = /work2/08708/liwei/frontera/SpackView/oneapi23.1.0-impi21.9.0/view
-NSIMD_INC_DIRS = /work2/08708/liwei/frontera/SpackView/oneapi23.1.0-impi21.9.0/view/include
-NSIMD_LIB_DIRS = /work2/08708/liwei/frontera/SpackView/oneapi23.1.0-impi21.9.0/view/lib
-NSIMD_ARCH = AVX512_SKYLAKE
-NSIMD_OPTIONS =  #AVX2 FMA
-SSHT_DIR = /work2/08708/liwei/frontera/SpackView/oneapi23.1.0-impi21.9.0/view
-YAML_CPP_DIR = /work2/08708/liwei/frontera/SpackView/oneapi23.1.0-impi21.9.0/view
-ZLIB_DIR = /work2/08708/liwei/frontera/SpackView/oneapi23.1.0-impi21.9.0/view
