frontera: use Ofast instead of O2

--- a/frontera/oneapi/frontera.cfg
+++ b/frontera/oneapi/frontera.cfg
@@ -3,15 +3,15 @@
 VERSION = frontera-2024-11-24
 
 CPP = cpp
-FPP = cpp
 CC  = icx
 CXX = icpx
-F90 = ifort
+FPP = cpp
+F90 = ifx
 
-CPPFLAGS = -g
+CPPFLAGS = -g -DSIMD_DISABLE
 FPPFLAGS = -g -traditional
-CFLAGS   = -g -traceback -debug all -xCORE-AVX512 -align -std=gnu99 -fp-model precise
-CXXFLAGS = -g -traceback -debug all -xCORE-AVX512 -align -std=gnu++17 -fp-model precise
+CFLAGS   = -g -traceback -debug all -xCORE-AVX512 -align -std=gnu11 -fp-model precise
+CXXFLAGS = -g -traceback -debug all -xCORE-AVX512 -align -std=c++17 -fp-model precise
 F90FLAGS = -g -traceback -debug all -xCORE-AVX512 -align -pad -safe-cray-ptr
 
 LDFLAGS = -Wl,--export-dynamic -xCORE-AVX512
@@ -21,9 +21,7 @@ SYS_INC_DIRS = ${TACC_GSL_DIR}/include
 C_LINE_DIRECTIVES = yes
 F_LINE_DIRECTIVES = yes
 
-VECTORISE                = yes
-VECTORISE_ALIGNED_ARRAYS = no
-VECTORISE_INLINE         = no
+VECTORISE = no
 
 DEBUG           = no
 CPP_DEBUG_FLAGS = -DCARPET_DEBUG
@@ -34,13 +32,14 @@ F90_DEBUG_FLAGS = -O0 -check bounds -check format
 
 # -ipo increases dramatically the compilation time, but it can
 # lead to a 1-2% performance boost
+# -O2 is intel's default
 
 OPTIMISE           = yes
 CPP_OPTIMISE_FLAGS = # -DCARPET_OPTIMISE -DNDEBUG
 FPP_OPTIMISE_FLAGS = # -DCARPET_OPTIMISE -DNDEBUG
-C_OPTIMISE_FLAGS   = -O2 # -ipo
-CXX_OPTIMISE_FLAGS = -O2 # -ipo
-F90_OPTIMISE_FLAGS = -O2 # -ipo
+C_OPTIMISE_FLAGS   = -Ofast #-O2 # -ipo
+CXX_OPTIMISE_FLAGS = -Ofast #-O2 # -ipo
+F90_OPTIMISE_FLAGS = -Ofast #-O2 # -ipo
 
 CPP_NO_OPTIMISE_FLAGS  =
 FPP_NO_OPTIMISE_FLAGS  =
@@ -109,6 +108,8 @@ FFTW3_INC_DIRS = ${MKLROOT}/include/fftw
 FFTW3_LIBS = mkl_intel_lp64 mkl_sequential mkl_core
 
 PAPI_DIR = ${TACC_PAPI_DIR}
+
+BOOST_DIR = ${TACC_BOOST_DIR}
 
 PETSC_LAPACK_EXTRA_LIBS = mkl_intel_lp64 mkl_sequential mkl_core
 
