frontera: use Ofast for oneapi

--- a/frontera/oneapi/frontera.cfg
+++ b/frontera/oneapi/frontera.cfg
@@ -10,8 +10,8 @@ F90 = ifx
 
 CPPFLAGS = -g -DSIMD_DISABLE
 FPPFLAGS = -g -traditional
-CFLAGS   = -g -traceback -debug all -xCORE-AVX512 -align -std=gnu11 -fp-model precise
-CXXFLAGS = -g -traceback -debug all -xCORE-AVX512 -align -std=c++17 -fp-model precise
+CFLAGS   = -g -xCORE-AVX512 -align -std=gnu11
+CXXFLAGS = -g -xCORE-AVX512 -align -std=c++17
 F90FLAGS = -g -traceback -debug all -xCORE-AVX512 -align -pad -safe-cray-ptr
 
 LDFLAGS = -Wl,--export-dynamic -xCORE-AVX512
