frontera: use system adios2 for oneapi

--- a/frontera/oneapi/frontera.cfg
+++ b/frontera/oneapi/frontera.cfg
@@ -102,10 +102,13 @@ MPI_INC_DIRS = ${TACC_IMPI_DIR}/include
 MPI_LIB_DIRS = ${TACC_IMPI_DIR}/lib/release ${TACC_IMPI_DIR}/lib
 MPI_LIBS     = mpicxx mpifort mpi dl rt pthread
 
-FFTW3_DIR = ${MKLROOT}
+FFTW3_DIR      = ${MKLROOT}
 FFTW3_LIB_DIRS = ${MKLROOT}/lib/intel64
 FFTW3_INC_DIRS = ${MKLROOT}/include/fftw
-FFTW3_LIBS = mkl_intel_lp64 mkl_sequential mkl_core
+FFTW3_LIBS     = mkl_intel_lp64 mkl_sequential mkl_core
+
+ADIOS2_DIR  = ${TACC_ADIOS2_DIR}
+ADIOS2_LIBS = adios2_cxx11_mpi adios2_cxx11
 
 PAPI_DIR = ${TACC_PAPI_DIR}
 
