frontera:: add include and lib64 for adios2 for oneapi

--- a/frontera/oneapi/frontera.cfg
+++ b/frontera/oneapi/frontera.cfg
@@ -10,8 +10,8 @@ F90 = ifx
 
 CPPFLAGS = -g -DSIMD_DISABLE
 FPPFLAGS = -g -traditional
-CFLAGS   = -g -xCORE-AVX512 -align -std=gnu11
-CXXFLAGS = -g -xCORE-AVX512 -align -std=c++17
+CFLAGS   = -g -xCORE-AVX512 -align -std=gnu11 -pipe
+CXXFLAGS = -g -xCORE-AVX512 -align -std=c++17 -pipe
 F90FLAGS = -g -traceback -debug all -xCORE-AVX512 -align -pad -safe-cray-ptr
 
 LDFLAGS = -Wl,--export-dynamic -xCORE-AVX512
@@ -105,6 +105,8 @@ FFTW3_INC_DIRS = ${MKLROOT}/include/fftw
 FFTW3_LIBS     = mkl_intel_lp64 mkl_sequential mkl_core
 
 ADIOS2_DIR  = ${TACC_ADIOS2_DIR}
+ADIOS2_INC_DIRS = ${TACC_ADIOS2_DIR}/include
+ADIOS2_LIB_DIRS = ${TACC_ADIOS2_DIR}/lib64
 ADIOS2_LIBS = adios2_cxx11_mpi adios2_cxx11
 
 PAPI_DIR = ${TACC_PAPI_DIR}
