frontera: use precompiled AMReX for oneapi

--- a/frontera/oneapi/frontera.cfg
+++ b/frontera/oneapi/frontera.cfg
@@ -70,6 +70,8 @@ CXX_WARN_FLAGS =
 F90_WARN_FLAGS =
 
 
+AMREX_DIR = ${ETKPATH}/amrex-lib
+
 BLAS_DIR  = ${MKLROOT}/lib/intel64
 BLAS_LIBS = mkl_intel_lp64 mkl_sequential mkl_core
 
