frontera: use O3 and more for OPTIMISE_FLAGS

--- a/frontera/oneapi/frontera.cfg
+++ b/frontera/oneapi/frontera.cfg
@@ -10,8 +10,8 @@ F90 = ifx
 
 CPPFLAGS = -g -DSIMD_DISABLE
 FPPFLAGS = -g -traditional
-CFLAGS   = -g -xCORE-AVX512 -align -std=gnu11 -pipe
-CXXFLAGS = -g -xCORE-AVX512 -align -std=c++17 -pipe
+CFLAGS   = -g -xCORE-AVX512 -align -std=gnu11 -pipe -fp-model=precise
+CXXFLAGS = -g -xCORE-AVX512 -align -std=c++17 -pipe -fp-model=precise
 F90FLAGS = -g -traceback -debug all -xCORE-AVX512 -align -pad -safe-cray-ptr
 
 LDFLAGS = -Wl,--export-dynamic -xCORE-AVX512
@@ -37,9 +37,9 @@ F90_DEBUG_FLAGS = -O0 -check bounds -check format
 OPTIMISE           = yes
 CPP_OPTIMISE_FLAGS = # -DCARPET_OPTIMISE -DNDEBUG
 FPP_OPTIMISE_FLAGS = # -DCARPET_OPTIMISE -DNDEBUG
-C_OPTIMISE_FLAGS   = -Ofast #-O2 # -ipo
-CXX_OPTIMISE_FLAGS = -Ofast #-O2 # -ipo
-F90_OPTIMISE_FLAGS = -Ofast #-O2 # -ipo
+C_OPTIMISE_FLAGS   = -O3 -fexcess-precision=fast -ffp-contract=fast -fno-math-errno -fno-rounding-math # -ipo
+CXX_OPTIMISE_FLAGS = -O2 -fexcess-precision=fast -ffp-contract=fast -fno-math-errno -fno-rounding-math # -ipo
+F90_OPTIMISE_FLAGS = -O3 # -ipo
 
 CPP_NO_OPTIMISE_FLAGS  =
 FPP_NO_OPTIMISE_FLAGS  =
@@ -78,14 +78,14 @@ BLAS_LIBS = mkl_intel_lp64 mkl_sequential mkl_core
 LAPACK_DIR  = ${MKLROOT}/lib/intel64
 LAPACK_LIBS = mkl_intel_lp64 mkl_sequential mkl_core
 
-OPENBLAS_DIR  = ${MKLROOT}
+OPENBLAS_DIR       = ${MKLROOT}
 OPENBLAS_LIB_DIRS  = ${MKLROOT}/lib/intel64
-OPENBLAS_LIBS = mkl_intel_lp64 mkl_sequential mkl_core
+OPENBLAS_LIBS      = mkl_intel_lp64 mkl_sequential mkl_core
 
-HDF5_DIR = ${TACC_PHDF5_DIR}
+HDF5_DIR      = ${TACC_PHDF5_DIR}
 HDF5_INC_DIRS = ${TACC_PHDF5_DIR}/include
 HDF5_LIB_DIRS = ${TACC_PHDF5_DIR}/lib
-HDF5_LIBS = hdf5_hl_fortran hdf5_hl hdf5_fortran hdf5
+HDF5_LIBS     = hdf5_hl_fortran hdf5_hl hdf5_fortran hdf5
 
 # GSL's detect calls gsl-config which returns wrong results
 # as a workaround the directories were added to LIBDIRS and SYS_INC_DIRS above
@@ -106,10 +106,10 @@ FFTW3_LIB_DIRS = ${MKLROOT}/lib/intel64
 FFTW3_INC_DIRS = ${MKLROOT}/include/fftw
 FFTW3_LIBS     = mkl_intel_lp64 mkl_sequential mkl_core
 
-ADIOS2_DIR  = ${TACC_ADIOS2_DIR}
+ADIOS2_DIR      = ${TACC_ADIOS2_DIR}
 ADIOS2_INC_DIRS = ${TACC_ADIOS2_DIR}/include
 ADIOS2_LIB_DIRS = ${TACC_ADIOS2_DIR}/lib64
-ADIOS2_LIBS = adios2_cxx11_mpi adios2_cxx11
+ADIOS2_LIBS     = adios2_cxx11_mpi adios2_cxx11
 
 PAPI_DIR = ${TACC_PAPI_DIR}
 
