vista: update vista.cfg for gcc

--- a/vista/gcc/vista.cfg
+++ b/vista/gcc/vista.cfg
@@ -11,21 +11,21 @@ F90  = gfortran
 
 # subset CUCCFLAGS without "-x cu" (must no be used here) and options used only to compile code
 # must set LD and not LDFLAGS to avoid ExternalLibraries picking up the options
-LD = nvcc --compiler-bindir g++ -g --forward-unknown-to-host-compiler --relocatable-device-code=true --objdir-as-tempdir
+#LD = nvcc --compiler-bindir g++ -g --forward-unknown-to-host-compiler --relocatable-device-code=true --objdir-as-tempdir
 
 CPPFLAGS = -DSIMD_CPU
 FPPFLAGS = -traditional
 # do not add -std=gn99 or -std=c99 below since that causes nvcc to fail linking
 # HydroRNSID's utilities. GCC on Delta defaults to c17, so is "new enough"
-CFLAGS    = -D_GNU_SOURCE -fomit-frame-pointer
-CXXFLAGS  = -pipe -g --compiler-options -march=native -std=c++17 --compiler-options -std=gnu++17 --expt-relaxed-constexpr --extended-lambda --gpu-architecture sm_90 --forward-unknown-to-host-compiler --Werror ext-lambda-captures-this --relocatable-device-code=true --objdir-as-tempdir
+CFLAGS    = -pipe -g -std=gnu11
+CXXFLAGS  = -pipe -g -std=c++17
 F90FLAGS  = -ffixed-line-length-none -fno-range-check -fomit-frame-pointer
 
 LDFLAGS = -L${TACC_NVPL_LIB}
 
 SYS_INC_DIRS = ${TACC_GSL_DIR}/include
 LIBDIRS      = ${TACC_GSL_DIR}/lib
-LIBS         = gfortran nvToolsExt curand hdf5
+LIBS         = gfortran hdf5
 
 C_LINE_DIRECTIVES = yes
 F_LINE_DIRECTIVES = yes
