vista: turn OPENMP for gg

--- a/vista/gcc/vista.cfg
+++ b/vista/gcc/vista.cfg
@@ -30,7 +30,12 @@ LIBS         = gfortran hdf5
 C_LINE_DIRECTIVES = yes
 F_LINE_DIRECTIVES = yes
 
-VECTORISE = no
+INTEGER_PRECISION = 4
+REAL_PRECISION = 8
+
+#VECTORISE                = yes
+#VECTORISE_ALIGNED_ARRAYS = no
+#VECTORISE_INLINE         = yes
 
 DEBUG            = no
 CPP_DEBUG_FLAGS  = -g -DCARPET_DEBUG
@@ -53,7 +58,13 @@ C_PROFILE_FLAGS   = -pg
 CXX_PROFILE_FLAGS = -pg
 F90_PROFILE_FLAGS = -pg
 
-OPENMP           = no
+OPENMP           = yes
+CPP_OPENMP_FLAGS = -fopenmp
+FPP_OPENMP_FLAGS = -D_OPENMP
+C_OPENMP_FLAGS   = -fopenmp
+CXX_OPENMP_FLAGS = -fopenmp
+CUCC_OPENMP_FLAGS= -fopenmp
+F90_OPENMP_FLAGS = -fopenmp
 
 WARN            = no
 CPP_WARN_FLAGS  = -Wall
@@ -62,9 +73,9 @@ C_WARN_FLAGS    = -Wall
 CXX_WARN_FLAGS  = -Wall
 F90_WARN_FLAGS  = -Wall
 
-# CUDA does not support these
-DISABLE_INT16 = yes
-DISABLE_REAL16 = yes
+## CUDA does not support these
+#DISABLE_INT16 = yes
+#DISABLE_REAL16 = yes
 
 # More Options
 
