--- a/vista/gcc/vista.cfg
+++ b/vista/gcc/vista.cfg
@@ -47,8 +47,8 @@ F90_DEBUG_FLAGS  = -g -ftrapv -fstack-protector-all -fcheck=bounds,do,mem,pointe
 OPTIMISE            = yes
 CPP_OPTIMISE_FLAGS  = # -DCARPET_OPTIMISE -DNDEBUG
 FPP_OPTIMISE_FLAGS  = # -DCARPET_OPTIMISE -DNDEBUG
-C_OPTIMISE_FLAGS    = -O3
-CXX_OPTIMISE_FLAGS  = -O3
+C_OPTIMISE_FLAGS    = -O3 -mcpu=neoverse-v2
+CXX_OPTIMISE_FLAGS  = -O3 -mcpu=neoverse-v2
 F90_OPTIMISE_FLAGS  = -O3
 
 PROFILE           = no
