vista: update vista.cfg for gg

--- a/vista/gcc/vista.cfg
+++ b/vista/gcc/vista.cfg
@@ -17,9 +17,9 @@ F90  = gfortran
 FPPFLAGS = -traditional
 # do not add -std=gn99 or -std=c99 below since that causes nvcc to fail linking
 # HydroRNSID's utilities. GCC on Delta defaults to c17, so is "new enough"
-CFLAGS    = -pipe -g -std=gnu11 -O3 -mcpu=neoverse-v2 -ftree-vectorize -ffast-math -funroll-loops
-CXXFLAGS  = -pipe -g -std=c++17 -O3 -mcpu=neoverse-v2 -ftree-vectorize -ffast-math -funroll-loops
-F90FLAGS  = -ffixed-line-length-none -fno-range-check -fomit-frame-pointer -O3 -mcpu=neoverse-v2
+CFLAGS    = -pipe -g -std=gnu11
+CXXFLAGS  = -pipe -g -std=c++17
+F90FLAGS  = -ffixed-line-length-none -fno-range-check -fomit-frame-pointer
 
 LDFLAGS = -L${TACC_NVPL_LIB}
 
@@ -33,10 +33,6 @@ F_LINE_DIRECTIVES = yes
 INTEGER_PRECISION = 4
 REAL_PRECISION = 8
 
-#VECTORISE                = yes
-#VECTORISE_ALIGNED_ARRAYS = no
-#VECTORISE_INLINE         = yes
-
 DEBUG            = no
 CPP_DEBUG_FLAGS  = -g -DCARPET_DEBUG
 FPP_DEBUG_FLAGS  = -g -DCARPET_DEBUG
@@ -47,9 +43,9 @@ F90_DEBUG_FLAGS  = -g -ftrapv -fstack-protector-all -fcheck=bounds,do,mem,pointe
 OPTIMISE            = yes
 CPP_OPTIMISE_FLAGS  = # -DCARPET_OPTIMISE -DNDEBUG
 FPP_OPTIMISE_FLAGS  = # -DCARPET_OPTIMISE -DNDEBUG
-C_OPTIMISE_FLAGS    = -O3
-CXX_OPTIMISE_FLAGS  = -O3
-F90_OPTIMISE_FLAGS  = -O3
+C_OPTIMISE_FLAGS    = -O3 -mcpu=neoverse-v2
+CXX_OPTIMISE_FLAGS  = -O3 -mcpu=neoverse-v2
+F90_OPTIMISE_FLAGS  = -O3 -mcpu=neoverse-v2
 
 PROFILE           = no
 CPP_PROFILE_FLAGS =
@@ -61,9 +57,9 @@ F90_PROFILE_FLAGS = -pg
 OPENMP           = yes
 CPP_OPENMP_FLAGS = -fopenmp
 FPP_OPENMP_FLAGS = -D_OPENMP
-C_OPENMP_FLAGS   = -fopenmp -fPIC
-CXX_OPENMP_FLAGS = -fopenmp -fPIC
-F90_OPENMP_FLAGS = -fopenmp -fPIC
+C_OPENMP_FLAGS   = -fopenmp
+CXX_OPENMP_FLAGS = -fopenmp
+F90_OPENMP_FLAGS = -fopenmp
 
 WARN            = no
 CPP_WARN_FLAGS  = -Wall
