vista: update vista.cfg for gcc

--- a/vista/gcc/vista.cfg
+++ b/vista/gcc/vista.cfg
@@ -30,9 +30,6 @@ LIBS         = gfortran hdf5
 C_LINE_DIRECTIVES = yes
 F_LINE_DIRECTIVES = yes
 
-INTEGER_PRECISION = 4
-REAL_PRECISION = 8
-
 DEBUG            = no
 CPP_DEBUG_FLAGS  = -g -DCARPET_DEBUG
 FPP_DEBUG_FLAGS  = -g -DCARPET_DEBUG
@@ -68,11 +65,9 @@ C_WARN_FLAGS    = -Wall
 CXX_WARN_FLAGS  = -Wall
 F90_WARN_FLAGS  = -Wall
 
-## CUDA does not support these
-#DISABLE_INT16 = yes
-#DISABLE_REAL16 = yes
-
 # More Options
+
+AMREX_DIR = ${ETKPATH}/amrex-lib-gg
 
 MPI_DIR      = ${TACC_MPI_DIR}
 MPI_INC_DIRS = ${TACC_MPI_DIR}/include
