vista: update vista.cfg for gcc

--- a/vista/gcc/vista.cfg
+++ b/vista/gcc/vista.cfg
@@ -30,6 +30,8 @@ LIBS         = gfortran hdf5
 C_LINE_DIRECTIVES = yes
 F_LINE_DIRECTIVES = yes
 
+VECTORISE = no
+
 DEBUG            = no
 CPP_DEBUG_FLAGS  = -g -DCARPET_DEBUG
 FPP_DEBUG_FLAGS  = -g -DCARPET_DEBUG
