vista: add arm specific option for gcc-nvcc

--- a/vista/gcc-nvcc/vista.cfg
+++ b/vista/gcc-nvcc/vista.cfg
@@ -44,9 +44,9 @@ F90_DEBUG_FLAGS  = -g -ftrapv -fstack-protector-all -fcheck=bounds,do,mem,pointe
 OPTIMISE            = yes
 CPP_OPTIMISE_FLAGS  = # -DCARPET_OPTIMISE -DNDEBUG
 FPP_OPTIMISE_FLAGS  = # -DCARPET_OPTIMISE -DNDEBUG
-C_OPTIMISE_FLAGS    = -O3
-CXX_OPTIMISE_FLAGS  = -O3
-F90_OPTIMISE_FLAGS  = -O3
+C_OPTIMISE_FLAGS    = -O3 -mcpu=neoverse-v2
+CXX_OPTIMISE_FLAGS  = -O3 -mcpu=neoverse-v2
+F90_OPTIMISE_FLAGS  = -O3 -mcpu=neoverse-v2
 
 PROFILE           = no
 CPP_PROFILE_FLAGS =
