--- a/vista/nvhpc/vista.cfg
+++ b/vista/nvhpc/vista.cfg
@@ -7,25 +7,25 @@ CPP  = cpp
 FPP  = cpp
 CC   = nvc
 CXX  = nvc++
-F90  = gfortran
+F90  = nvfortran
 
 # subset CUCCFLAGS without "-x cu" (must no be used here) and options used only to compile code
 # must set LD and not LDFLAGS to avoid ExternalLibraries picking up the options
 LD = nvc++
 
-CPPFLAGS = -DSIMD_CPU
-FPPFLAGS = -traditional
+#CPPFLAGS = -DSIMD_CPU
+FPPFLAGS  = -traditional
 # do not add -std=gn99 or -std=c99 below since that causes nvcc to fail linking
 # HydroRNSID's utilities. GCC on Delta defaults to c17, so is "new enough"
-CFLAGS    = -I${TACC_NVIDIA_INC} -std=c99
-CXXFLAGS  = -I${TACC_NVIDIA_INC}
-F90FLAGS  = -ffixed-line-length-none -fno-range-check -fomit-frame-pointer
+CFLAGS    = -I${TACC_NVIDIA_INC} -D_GNU_SOURCE
+CXXFLAGS  = -I${TACC_NVIDIA_INC} -std=c++17 -D_GNU_SOURCE
+F90FLAGS  = -Mcray=pointer
 
 LDFLAGS = -L${TACC_NVIDIA_LIB}
 
 SYS_INC_DIRS = ${TACC_NVIDIA_MATH_INC} ${TACC_GSL_DIR}/include
 LIBDIRS      = ${TACC_NVIDIA_MATH_LIB} ${TACC_GSL_DIR}/lib
-LIBS         = gfortran nvToolsExt curand hdf5
+LIBS         = nvf
 
 C_LINE_DIRECTIVES = yes
 F_LINE_DIRECTIVES = yes
@@ -53,7 +53,12 @@ C_PROFILE_FLAGS   = -pg
 CXX_PROFILE_FLAGS = -pg
 F90_PROFILE_FLAGS = -pg
 
-OPENMP = no
+OPENMP           = yes
+CPP_OPENMP_FLAGS = -fopenmp
+FPP_OPENMP_FLAGS = -fopenmp
+C_OPENMP_FLAGS   = -fopenmp
+CXX_OPENMP_FLAGS = -fopenmp
+F90_OPENMP_FLAGS = -fopenmp
 
 WARN            = no
 CPP_WARN_FLAGS  = -Wall
@@ -69,7 +74,7 @@ DISABLE_REAL16 = yes
 # More Options
 
 AMREX_DIR = ${WORK}/local/amrex-lib
-AMREX_ENABLE_CUDA = yes
+AMREX_ENABLE_CUDA = no
 
 MPI_DIR      = ${TACC_MPI_DIR}
 MPI_INC_DIRS = ${TACC_MPI_DIR}/include
