--- a/vista/nvc/vista.cfg
+++ b/vista/nvc/vista.cfg
@@ -23,9 +23,9 @@ F90FLAGS  = -Mcray=pointer
 
 LDFLAGS = -L${TACC_NVIDIA_LIB}
 
-SYS_INC_DIRS = ${TACC_NVIDIA_MATH_INC} ${TACC_GSL_DIR}/include
-LIBDIRS      = ${TACC_NVIDIA_MATH_LIB} ${TACC_GSL_DIR}/lib
-LIBS         = nvf
+SYS_INC_DIRS = ${TACC_GSL_DIR}/include
+LIBDIRS      = ${TACC_GSL_DIR}/lib
+LIBS         = nvf hdf5
 
 C_LINE_DIRECTIVES = yes
 F_LINE_DIRECTIVES = yes
@@ -42,9 +42,9 @@ F90_DEBUG_FLAGS  = -g -ftrapv -fstack-protector-all -fcheck=bounds,do,mem,pointe
 OPTIMISE            = yes
 CPP_OPTIMISE_FLAGS  = # -DCARPET_OPTIMISE -DNDEBUG
 FPP_OPTIMISE_FLAGS  = # -DCARPET_OPTIMISE -DNDEBUG
-C_OPTIMISE_FLAGS    = -O3
-CXX_OPTIMISE_FLAGS  = -O3
-F90_OPTIMISE_FLAGS  = -O3
+C_OPTIMISE_FLAGS    = -Mvect=simd -fast
+CXX_OPTIMISE_FLAGS  = -Mvect=simd -fast
+F90_OPTIMISE_FLAGS  = -Mvect=simd -fast
 
 PROFILE           = no
 CPP_PROFILE_FLAGS =
@@ -68,12 +68,12 @@ CXX_WARN_FLAGS  = -Wall
 F90_WARN_FLAGS  = -Wall
 
 # CUDA does not support these
-DISABLE_INT16 = yes
+DISABLE_INT16  = yes
 DISABLE_REAL16 = yes
 
 # More Options
 
-AMREX_DIR = ${WORK}/local/amrex-lib
+AMREX_DIR = ${ETKPATH}/amrex-lib-nvc
 AMREX_ENABLE_CUDA = no
 
 MPI_DIR      = ${TACC_MPI_DIR}
@@ -81,10 +81,19 @@ MPI_INC_DIRS = ${TACC_MPI_DIR}/include
 MPI_LIB_DIRS = ${TACC_MPI_DIR}/lib
 MPI_LIBS     = mpi
 
-BLAS_DIR     =
-BLAS_LIBS    =
-LAPACK_DIR   =
-LAPACK_LIBS  =
+HWLOC_DIR      = ${TACC_MPI_DIR}
+HWLOC_INC_DIRS = ${TACC_MPI_DIR}/include
+HWLOC_LIB_DIRS = ${TACC_MPI_DIR}/lib
+
+BLAS_DIR        = ${TACC_NVPL_DIR}
+BLAS_INC_DIRS   = ${TACC_NVPL_DIR}/include
+BLAS_LIB_DIRS   = ${TACC_NVPL_DIR}/lib
+BLAS_LIBS       = nvpl_blas_lp64_gomp
+
+LAPACK_DIR      = ${TACC_NVPL_DIR}
+LAPACK_INC_DIRS = ${TACC_NVPL_DIR}/include
+LAPACK_LIB_DIRS = ${TACC_NVPL_DIR}/lib
+LAPACK_LIBS     = nvpl_lapack_lp64_gomp
 
 ADIOS2_DIR = ${TACC_ADIOS2_DIR}
 ADIOS2_INC_DIRS = ${TACC_ADIOS2_INC}
@@ -93,16 +102,16 @@ ADIOS2_LIBS = adios2_cxx11_mpi adios2_cxx11
 
 BOOST_DIR = ${TACC_BOOST_DIR}
 FFTW3_DIR = ${TACC_FFTW3_DIR}
-
 GSL_DIR = ${TACC_GSL_DIR}
 
 HDF5_DIR = ${TACC_HDF5_DIR}
 HDF5_INC_DIRS = ${TACC_HDF5_INC}
 HDF5_LIB_DIRS = ${TACC_HDF5_LIB}
 
-SILO_DIR = ${TACC_SILO_DIR}
-SILO_INC_DIRS = ${TACC_SILO_INC}
-SILO_LIB_DIRS = ${TACC_SILO_LIB}
+# require hdf5 which is conflict with adios2 which require phdf5
+#SILO_DIR = ${TACC_SILO_DIR}
+#SILO_INC_DIRS = ${TACC_SILO_INC}
+#SILO_LIB_DIRS = ${TACC_SILO_LIB}
 
 ZLIB_DIR = ${TACC_ZLIB_DIR}
 
